RESOLVED FIXED29726
Popup menus in Mac Chromium do not register the users selection
https://bugs.webkit.org/show_bug.cgi?id=29726
Summary Popup menus in Mac Chromium do not register the users selection
Paul Godavari
Reported 2009-09-24 16:17:43 PDT
This is a regression caused by: http://trac.webkit.org/changeset/48642
Attachments
Patch to fix Mac Chromium popup menu regression. (1.54 KB, patch)
2009-09-24 16:24 PDT, Paul Godavari
no flags
Paul Godavari
Comment 1 2009-09-24 16:24:52 PDT
Created attachment 40090 [details] Patch to fix Mac Chromium popup menu regression.
Eric Seidel (no email)
Comment 2 2009-09-24 16:39:23 PDT
Comment on attachment 40090 [details] Patch to fix Mac Chromium popup menu regression. OK. Code change looks fine, but how do we test this? manual tests are OK. They go in WebCore/manual-tests/
Paul Godavari
Comment 3 2009-09-24 16:43:41 PDT
There's already a manual popup menu test that I created: WebCore/manual-tests/select-narrow-width.html Note: this is a P0 release blocker for Mac Chromium.
WebKit Commit Bot
Comment 4 2009-09-25 09:23:13 PDT
Comment on attachment 40090 [details] Patch to fix Mac Chromium popup menu regression. Clearing flags on attachment: 40090 Committed r48757: <http://trac.webkit.org/changeset/48757>
WebKit Commit Bot
Comment 5 2009-09-25 09:23:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.